# package_compile_sys

./: .gitignore  Makefile  connect.html  env_oprate.sh  env_setup.sh  index.html  minidlna.conf  mk.sh  new_pkg.sh
app/cppUtils/: CMakeLists.txt
app/cppUtils/BinSplit/: BinSplit.cpp  BinSplit.h
app/cppUtils/CrcTool/: CrcTool.cpp
app/cppUtils/MTQueue/: MTQueue.cpp  MTQueue.h
app/cppUtils/MemPool/: MemPool.cpp  MemPool.h
app/cppUtils/UrlContex/: UrlContex.h
app/lzUtils/: CMakeLists.txt  base.h
app/lzUtils/alsa_ctrl/: alsa_ctrl.c  alsa_ctrl.h  mixer_ctrl.c
app/lzUtils/autom/: autom.c  autom.h
app/lzUtils/ccsrb/: ccsrb.c  ccsrb.h
app/lzUtils/common/: fd_op.c  fd_op.h  fp_op.c  fp_op.h  misc.c  misc.h  px_sem.h  px_timer.c  px_timer.h  un_fifo.c  un_fifo.h
app/lzUtils/csrb/: csrb.c  csrb.h
app/lzUtils/dfq_fifo/: dfq_fifo.c  dfq_fifo.h
app/lzUtils/slog/: com_log.h  slog.c  slog.h
app/lzUtils/trd_timer/: trd_timer.c  trd_timer.h
app/lzUtils/un_fifo_ops/: un_fifo_ops.c  un_fifo_ops.h
app/lzUtils/user_fifo/: user_fifo.h
app/lzUtils/ut_socket/: ut_socket.c  ut_socket.h
app/lzUtils/vad_op/: vad_op.c  vad_op.h
app_sources/DlnaServer/: CMakeLists.txt  DlnaDmrOutputFfmpeg.cpp  DlnaDmrOutputFfmpeg.h  main.cpp
app_sources/DlnaServer/Dlna/: DlnaDmrInterfaceOutput.h  DlnaDmrOutput.cpp  DlnaDmrOutput.h  DlnaDmrSdk.cpp  DlnaDmrSdk.h  DlnaDmrSongMetaData.cpp  DlnaDmrSongMetaData.h  DlnaDmrUpnp.cpp  DlnaDmrUpnp.h  DlnaDmrUpnpConnMgr.cpp  DlnaDmrUpnpConnMgr.h  DlnaDmrUpnpControl.cpp  DlnaDmrUpnpControl.h  DlnaDmrUpnpDevice.cpp  DlnaDmrUpnpDevice.h  DlnaDmrUpnpRender.cpp  DlnaDmrUpnpRender.h  DlnaDmrUpnpTransport.cpp  DlnaDmrUpnpTransport.h  DlnaDmrVariableContainer.cpp  DlnaDmrVariableContainer.h  DlnaDmrWebServer.cpp  DlnaDmrWebServer.h  DlnaDmrXmlDoc.cpp  DlnaDmrXmlDoc.h  DlnaDmrXmlEscape.cpp  DlnaDmrXmlEscape.h
app_sources/DlnaServer/Dlna/upnp/: FreeList.h  LinkedList.h  ThreadPool.h  TimerThread.h  UpnpString.h  ithread.h  ixml.h  ixmldebug.h  upnp.h  upnpconfig.h  upnpdebug.h  upnptools.h
app_sources/DlnaServer/Player/: AudioPlayerImpl.cpp  AudioPlayerImpl.h  AudioPlayerListener.h  PcmBufPool.cpp
app_sources/DlnaServer/include/DCSApp/: ActivityMonitorSingleton.h  AppThreadName.h  ApplicationManager.h  AudioCallProxy.h  Configuration.h  DCSApplication.h  DeviceIoWrapper.h  DuerLinkMtkInstance.h  DuerLinkWrapper.h  DuerosFifoCmdTrigger.h  SoundController.h  ThreadPoolWrapper.h  VoiceAndTouchWakeUpObserver.h
app_sources/DlnaServer/include/Dlna/: DlnaDmrLogging.h  DlnaDmrOutputFfmpeg.h
app_sources/DlnaServer/src/: ActivityMonitorSingleton.cpp  ApplicationManager.cpp  AudioCallProxy.cpp  CMakeLists.txt  Configuration.cpp  DCSApplication.cpp  DeviceIoWrapper.cpp  DlnaDmrOutputFfmpeg.cpp  DuerLinkMtkInstance.cpp  DuerLinkWrapper.cpp  DuerosFifoCmdTrigger.cpp  RecordAudioManager.cpp  SoundController.cpp  SystemUpdateRevWrapper.cpp  ThreadPoolWrapper.cpp  VoiceAndTouchWakeUpObserver.cpp  main.cpp
app_sources/DlnaServer/src/Audio/: AlsaAudioMicrophoneWrapper.cpp  AlsaRecorder.cpp  CMakeLists.txt  PortAudioMicrophoneWrapper.cpp
app_sources/DlnaServer/src/Dlna/: DlnaDmrUpnpConnMgr.cpp  DlnaDmrUpnpControl.cpp  DlnaDmrUpnpTransport.cpp
app_sources/cppUtils/: CMakeLists.txt  base.h
app_sources/cppUtils/Base64Tool/: Base64Tool.cpp  Base64Tool.h
app_sources/cppUtils/CrcTool/: CrcTool.h
app_sources/cppUtils/DataBuffer/: DataBuffer.cpp  DataBuffer.h
app_sources/cppUtils/MemPool/: MemPool.h
app_sources/cppUtils/UrlContex/: UrlContex.cpp  UrlContex.h
app_sources/lzUtils/: CMakeLists.txt  base.h
app_sources/lzUtils/alsa_ctrl/: alsa_ctrl.c  alsa_ctrl.h  mixer_ctrl.c  mixer_ctrl.h
app_sources/lzUtils/autom/: autom.c  autom.h
app_sources/lzUtils/ccsrb/: ccsrb.c  ccsrb.h
app_sources/lzUtils/common/: dll_fifo.c  dll_fifo.h  fd_op.c  fd_op.h  fp_op.c  fp_op.h  misc.c  misc.h  px_sem.h  px_timer.c  px_timer.h
app_sources/lzUtils/csrb/: csrb.c  csrb.h
app_sources/lzUtils/dfq_fifo/: dfq_fifo.c  dfq_fifo.h
app_sources/lzUtils/shrb/: shrb.c  shrb.h
app_sources/lzUtils/slog/: com_log.h  slog.c  slog.h
app_sources/lzUtils/trd_timer/: trd_timer.c  trd_timer.h
app_sources/lzUtils/un_fifo_ops/: un_fifo_ops.c  un_fifo_ops.h
app_sources/lzUtils/user_fifo/: user_fifo.c  user_fifo.h
app_sources/lzUtils/user_timer/: user_timer.c  user_timer.h
app_sources/lzUtils/ut_socket/: ut_socket.c  ut_socket.h
app_sources/lzUtils/vad_op/: vad_op.c  vad_op.h
app_sources/media/MediaPlayer/: CMakeLists.txt  PlayerObserver.h  PlayerProxy.h  main.cpp  main.h
app_sources/media/alsa_wrapper/: CMakeLists.txt  alsa_ctrl.c  alsa_ctrl.h  mixer_ctrl.c  mixer_ctrl.h
app_sources/multiBox/: CMakeLists.txt
app_sources/multiBox/files/: AppManagerTask.conf  GpioCtrl.sh  S35multiBox  SceneSwitch.sh  appManager.sh  getTxtAudio.sh  logCtrl.sh  wl_cfg.sh
app_sources/multiBox/include/Wakeup/: snowboy.h
app_sources/multiBox/src/: main.cpp  main.h
app_sources/multiBox/src/AppManager/: AppManager.cpp  AppManager.h
app_sources/multiBox/src/Base64Tool/: Base64Tool.cpp
app_sources/multiBox/src/Broadcast/: Broadcast.cpp  Broadcast.h
app_sources/multiBox/src/CrcTool/: CrcTool.cpp
app_sources/multiBox/src/HttpCli/: HttpCli.cpp  HttpCli.h
app_sources/multiBox/src/Misc/: Misc.cpp  wav.h
app_sources/multiBox/src/PaOption/: PaOption.cpp
app_sources/multiBox/src/RecvBc/: RecvBc.cpp  RecvBc.h
app_sources/multiBox/src/RecvBc_back/: RecvBc.cpp  RecvBc.h
app_sources/multiBox/src/RtPlayer/: RtPlayer.cpp
app_sources/multiBox/src/SockServ/: SockServ.cpp
app_sources/multiBox/src/Wakeup/: Wakeup.cpp
app_sources/multiBox/src/adcKey/: adcKey.cpp  adcKey.h
app_sources/multiBox/src/allPlay/: AlsaController.cpp  AudioPlayerInterface.h  TimerUtil.cpp  TimerUtil.h  allPlayer.cpp  allPlayer.h
app_sources/multiBox/src/hotplug/: hotplug.cpp
app_sources/multiBox/src/i2cClient/: i2cClient.cpp
app_sources/multiBox/src/ntop/: ntop.cpp
app_sources/multiBox/src/sensor/: psensor.cpp  psensor.h  tsensor.cpp
app_sources/multiBox/src/uartd/: uartd.h
buildsys/: mk.sh
(+450 files in other folders)
